abstract public class NamedElement {
    String name;

    public NamedElement(String name) {
        this.name = name;
    }
}
