abstract public class Visitor {
    void visitAssociation(Association association) {}
    void visitAttribute(Attribute attribute) {}
    void visitEntity(Entity entity) {}
    void visitModel(Model model) {}
}
